<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DeviceIpActivity">

    <TextView
        android:id="@+id/TV1"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/wpisz_IP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV2"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/where_is_my_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/IP_TE_Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/ip_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IP_TE"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="number"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error_TV"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/error_place_holder"
        app:layout_constraintEnd_toEndOf="@+id/IP_TE_Layout"
        app:layout_constraintStart_toStartOf="@+id/IP_TE_Layout"
        app:layout_constraintTop_toBottomOf="@+id/IP_TE_Layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectBUtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="onConnectButtonClick"
        android:text="@string/polacz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_TE_Layout" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressCircleDeterminate"
        android:indeterminate="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/connectBUtton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IP_TE_Layout" />



</androidx.constraintlayout.widget.ConstraintLayout>